remctl (2.14-4) UNRELEASED; urgency=low

  * Add --install-layout=deb to the Python setup.py install commands to
    support Python 2.6.
  * Update to debhelper compability level V7.
    - Use debhelper rule minimization with overrides.
    - Skip the test suite if nocheck is set in DEB_BUILD_OPTIONS.
    - Let dh_install handle installation of remctl.conf.
  * Use the right optimization and warning flags when relinking libremctl.

 -- Russ Allbery <rra@debian.org>  Mon, 24 Aug 2009 16:28:04 -0700

remctl (2.14-3) unstable; urgency=low

  * Stop including the protocol documentation in remctl-server.  Add a
    pointer to the remctl-client package for protocol documentation in
    remctl-server's README.Debian.
  * Add a doc-base registration file for the remctl protocol specification
    in remctl-client.
  * Do not install the libremctl.la file.  Libtool *.la files force other
    packages using Libtool to declare excessive library dependencies.
  * Add an explicit build-dependency on Perl.  It was being pulled in by
    other build dependencies, but this is more correct.
  * Update standards version to 3.8.3 (no changes required).

 -- Russ Allbery <rra@debian.org>  Mon, 24 Aug 2009 16:12:57 -0700

remctl (2.14-2) unstable; urgency=low

  * Fix test suite behavior when IPv6 support is available in the library
    but disabled in the kernel.  Thanks, Peter 'p2' De Schrijver.
    (Closes: #530573)
  * Change php5-remctl's section to php to match override.

 -- Russ Allbery <rra@debian.org>  Mon, 08 Jun 2009 00:21:09 -0700

remctl (2.14-1) unstable; urgency=low

  * New upstream release.
    - remctld can be configured to pass an argument on standard input.
    - Arguments passed on standard input may now contain nuls.
    - remctld logging now replaces unprintable characters.
    - "command" and "subcommand" are now used instead of "type" and
      "service" in all documentation of remctl commands.
    - Better diagnosis of nul characters in command arguments.