@@ -7,6 +7,10 @@ else
     CFLAGS += -O2
 endif
 
+# The primary Python version, used to ensure that we run the test suite with
+# the module built for the default version of Python.
+PYTHON_VERSION := $(shell pyversions -dv)
+
 %:
 	dh $@
 
@@ -27,6 +31,8 @@ override_dh_auto_configure:
 # supported versions of Python.
 override_dh_auto_build:
 	perl -i -pe 's/(setup.py install .*) ;/$$1 --install-layout=deb ;/' \
+	    Makefile
+	perl -i -pe 's/(PYTHONPATH="[^"]+\*)`"/$$1-$(PYTHON_VERSION)`"/' \
 	    Makefile
 	dh_auto_build
 	cd $(CURDIR)/perl && $(MAKE) clean && perl Makefile.PL \
