@@ -6,6 +6,10 @@ remctl (2.14-4) UNRELEASED; urgency=low
     - Use debhelper rule minimization with overrides.
     - Skip the test suite if nocheck is set in DEB_BUILD_OPTIONS.
     - Let dh_install handle installation of remctl.conf.
+  * Apply a build-time fix to the upstream Makefile to only use the Python
+    build directory for the default version of Python.  This is required
+    now that make check is run after building Python modules for all
+    supported versions.
   * Use the right optimization and warning flags when relinking libremctl.
 
  -- Russ Allbery <rra@debian.org>  Mon, 24 Aug 2009 16:28:04 -0700
